tdf#99477 Make freeze cells commands toggle

Selecting a command from View - Freeze Cells should work like:
- If there is no freeze, set it up according to the command
- If there is a freeze of the same type, remove it
- If there is a freeze of a different type, switch to the
selected type

Change-Id: Ie23604da89b468a9c109d799c239dffa7b536d94